objects/Task_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Candidate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Attachments of candidates</description>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Task_Attachments_Candidates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>S3 Attachements for company</description>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Task_Attachments_Company_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>File_Location__c</fullName>
        <label>File Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>File_name__c</fullName>
        <label>File name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Attachment link to Job Order</description>
        <label>Job Order</label>
        <referenceTo>ts2__Job__c</referenceTo>
        <relationshipName>Task_Attachments_Job_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_Attachment_ID__c</fullName>
        <defaultValue>&quot;-1&quot;</defaultValue>
        <externalId>true</externalId>
        <label>Legacy Attachment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_FMP_Attachment_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy FMP Attachment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Attachment__c</fullName>
        <description>Formula field to open S3 Attachments</description>
        <formula>IF(File_name__c !=null&amp;&amp;File_name__c !=&apos;&apos;,HYPERLINK(&apos;/apex/S3attachment?id=&apos;+ Id, IMAGE(&quot;/resource/openattach&quot;, &quot;red&quot;, 20, 100), &apos;_blank&apos;),null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Attachment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S3_Bucket__c</fullName>
        <label>S3_Bucket</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Id__c</fullName>
        <label>Task Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Archived Attachments</label>
    <nameField>
        <label>Task Attachment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archived Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>